frontend/tests/snapshots/frames__dashboard_59x20.snap
---
source: tests/frames.rs
expression: text(&b)
---










      terminal too small — needs 60x20, this is 59x20
